assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Roboto+Flex:opsz,wght@8..144,300&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Roboto Flex', sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: #0b2c37
    
}


h2 {
    font-family: Anton, sans-serif;
    color: #7d1d1d

}

h1,h2 {
    margin-bottom: 15px;
    padding-top: 10px;
}

ul {
    list-style-type: none;
}

.container {
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 30px;
}

.logo {
    
    font-size: 150%;
    color: #7d1d1d;
    font-family: 'Great Vibes';

}

/* navbar section */
.active {
    border-bottom: 2px solid #7d1d1d;
}

.navbar a {
    color: #7d1d1d;
    text-decoration: none;
    font-size: 19px;
    font-weight: bold;
    
}

.navbar a:hover {
    color: #ffffff;
}

.navbar .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height:100%;

}

.navbar ul {
    display: flex;
}

.navbar ul li {
    margin-left: 20px;
}

.header {
    background-color: #E6F4F1;
}

p {
    font-family: Bebas;
    color: #0b2c37;
    font-size: x-large;
    font-weight: 400;
    margin-top: 10px;
    padding: 15px;
    white-space: normal;
}


.section-timeline {
    display: flex;
    align-items: center;

    
}

#history {
    
    margin-top: 120px;

}

.section-image {
    border-radius: 10px;
    border-bottom: white;
    margin: 20px 0 20px 0;
    width: 520px;
    height: auto;
    

}

.header img {
    max-width: 430px;
    
}

.navbar {
    background: #5aa0ef;;
    color: #7d1d1d;
    height: 120px;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    
}

.boxes .container {
    display: flex;
    justify-content: 	space-between;
}

.box {
    flex: 1;
    background-color: #5aa0ef;
    color: #7d1d1d;
    border-radius: 10px;
    margin: 20px 10px;
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
    padding: 15px 20px;

}

.box p {
    color: #2f0f0f;
}

.box h2 {
     text-align: center;
}

@media (max-width: 768px) {
    .section-timeline {
        flex-direction: column;
        padding-top: 20px;
        text-align: center;
        font-size: 2vw;
        
    }
    .section-timeline img p {
        align-items: center;
    }
   
}

footer {
    height: 120px;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #5aa0ef;
    
    
}

.social-networks {
    text-align: center;
    
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 200%;
    margin: 1%;
    padding: 3%;
    color: #fff;
    
}

.footer-style li {
    vertical-align: middle;
}

.section-video {
    background-color: #F1F1E6;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding-bottom: 200px;
    padding-top: 5px;
}

.section-video h2 {
    color: rgb(146, 22, 22)
    
}

/* form section */

.form-container {
    color: #3e3e5a;
    margin: 45px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 500px;

}

.form-section {
    display: flex;
    background-size: cover;
    background-position: center;
    height: 800px;
    justify-content: center;
}

.form-container p {
    padding: 70px 0 20px;
    text-align: center;
    max-width: 300px;
    
}

#form-text {
    display: inline-flex;
    background-color: #f1f1e6;
    vertical-align: middle;
    margin: 45px 0 15px;
    align-content: center;
    height: 520px;
    padding: 20px;
}

.signup-form input {
    display: block;

}

.signup-form {
    margin: 28px 10% 0 0;
    background-color: #F1F1E6;
    width: 100%;
    padding: 30px;

}

.signup-form > h2 {
    color: #ef5656;
    margin-bottom: 2px;
    align-items: center;
}

.text-input {
    background: transparent;
    color: #0e0e0e;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #0c0c0c;
    border-radius: 2px;
}

input[type=text] {
    border: 2px solid red;
    border-radius: 4px;
  }

input.submit-button {
    color:#f9f8f8;
    background-color: #7D1D26;
    font-size: 18px;
    padding: 15px 32px;
    border: 2px;
    border color: #7D1D26;
    border-radius: 10px;
    
}
  textarea {
    width: 100%;
    height: 100px;
    padding: 12px 20px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
    resize: none;
  }

.text-input:hover {
    border-color: #f16c6b;
}

.join-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #f16c6b;
    color: #fafafa;
    display: block;
}

.join-button:hover {
    background-color: #fafafa;
    color: #f16c6b;
}

/*about us page styling */
.about-us {

    background-color: #F1F1E6;
    margin: 120px 0;
    display: flex;
    justify-content: center;
    height: 500px;
    width: 100%;
}

.our-story {
    display: flex;
    flex-direction: row;
}

.about-us h2 p {
        text-align: center;
        
}

.about-us p {
    color: #0e0e0e;
    width: 800px;
    height: 400px;
    background-color: #79b2f3;
    border: 2px;
    border: #7d1d1d;
    border-radius: 10px;
    text-align: left;
    padding: 15px 5px;
    
}


/* media queries */
@media screen and (max-width: 800px){
.form-container {
    flex-direction: column;
    padding: 7px;
    margin-top: 40px;
    }
        #form-text .signup-form {
            flex-direction:row;	
            
    }
        h1 {
            color:#0b2c37
            
        }
        .boxes .container {
            display: inline-block;
            text-align: center;
        }
}

